--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
     "stylus-import-if-exist": "^1.1.0",
     "stylus-svg-size-template": "^1.0.0",
     "svg4everybody": "^2.0.0",
+    "swiper": "^4.5.1",
     "webpack": "^1.12.9",
     "webpack-stats-logger": "^1.0.1",
     "webpack-stream": "^3.1.0"
