--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "jade-get-data": "^1.0.0",
     "jade-injected": "^1.0.2",
     "jquery": "^2.1.4",
+    "jquery-mask-plugin": "^1.14.16",
     "merge-stream": "^1.0.0",
     "node-notifier": "^4.3.1",
     "npm-install-webpack-plugin": "^2.0.2",
