--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "jade-injected": "^1.0.2",
     "jquery": "^2.1.4",
     "jquery-mask-plugin": "^1.14.16",
+    "jquery-scrollToTop": "^0.4.3",
     "merge-stream": "^1.0.0",
     "node-notifier": "^4.3.1",
     "npm-install-webpack-plugin": "^2.0.2",
